--- a/mddf-tools/pom.xml
+++ b/mddf-tools/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.movielabs</groupId>
 	<artifactId>mddf-tools</artifactId>
-	<version>1.5.3</version>
+	<version>1.6.0</version>
 
 	<name>mddf-tools</name>
 	<description>Desk-top MDDF services</description>
@@ -16,7 +16,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<mddf.lib.version>1.5.3</mddf.lib.version>
+		<mddf.lib.version>1.6.0</mddf.lib.version>
 		<mddf.tool.version>${project.version}</mddf.tool.version>
 		<mddf.tool.build>M</mddf.tool.build>
 		<build.timestamp>${maven.build.timestamp}</build.timestamp>
@@ -51,10 +51,19 @@
 			<artifactId>mddf-lib</artifactId>
 			<version>${mddf.lib.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.movielabs</groupId>
+			<artifactId>mddf-lib</artifactId>
+			<version>${mddf.lib.version}</version>
+			<classifier>tests</classifier>
+			<type>test-jar</type>
+			<scope>test</scope> 
+		</dependency>
 	</dependencies>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test/src</testSourceDirectory>
 		<resources>
 			<resource>
 				<directory>src</directory>
