--- a/mddf-lib/src/com/movielabs/mddf/resources/structure_manifest_v1.11.json
+++ b/mddf-lib/src/com/movielabs/mddf/resources/structure_manifest_v1.11.json
@@ -88,7 +88,7 @@
 				{					
 					"$LAN": "./@language",
 					"max": "1",
-					"severity": "Warning",
+					"severity": "Error",
 					"xpath": "../{md}LocalizedInfo[@language={$LAN} and not(./{md}Region/{md}country) and not(./{md}Region/{md}countryRegion)] and not(./{md}ExcludedRegion/{md}country) and not(./{md}ExcludedRegion/{md}country)",
 					"msg": "Multiple occurences of LocalizedInfo must be disambiguated by @language",
 					"docref": "CM:cm_LocalInfo_mult"
@@ -97,7 +97,7 @@
 					"$LAN": "./@language",
 					"$COUNTRY": "./{md}Region/*",
 					"max": "1",
-					"severity": "Warning",
+					"severity": "Error",
 					"xpath": "../{md}LocalizedInfo[@language={$LAN} and ./{md}Region/*={$COUNTRY}]",
 					"msg": "Multiple occurences of LocalizedInfo must be disambiguated by @language and Region",
 					"docref": "CM:cm_LocalInfo_mult"
@@ -106,7 +106,7 @@
 					"$LAN": "./@language",
 					"$EXCOUNTRY": "./{md}ExcludedRegion/*",
 					"max": "1",
-					"severity": "Warning",
+					"severity": "Error",
 					"xpath": "../{md}LocalizedInfo[@language={$LAN} and ./{md}ExcludedRegion/*={$EXCOUNTRY}]",
 					"msg": "Multiple occurences of LocalizedInfo must be disambiguated by @language and Excluded Region",
 					"docref": "CM:cm_LocalInfo_mult"
@@ -115,12 +115,11 @@
 					"max": "1",
 					"severity": "Warning",
 					"xpath": "../{md}LocalizedInfo/{md}TargetAudience",
-					"msg": "Multiple occurences of LocalizedInfo that include TargetAudience should be reviewed manually. They are not checked by the validator.",
+					"msg": "Multiple occurences of LocalizedInfo that include TargetAudience elements should be reviewed manually. The validator does not check TargetAudience nodes for duplication.",
 					"docref": "CM:cm_LocalInfo_mult"
 				}
 			]
 		},
-		
 		
 		"SequenceParsing_warning": 
 		{
