--- a/mddf-lib/pom.xml
+++ b/mddf-lib/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.movielabs</groupId>
-	<artifactId>mddf-lib-test</artifactId>
+	<artifactId>mddf-lib</artifactId>
 	<version>2.0.3-SNAPSHOT</version>
 	<name>mddf library</name>
 	<description>implements all core (i.e., non-UI) functionality that can be used to generate, validate, or transform MovieLabs Digital Distribution Framework (MDDF) files.</description>
