--- a/mddf-tools/pom.xml
+++ b/mddf-tools/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.movielabs</groupId>
-	<artifactId>mddf-tools-test</artifactId>
+	<artifactId>mddf-tools</artifactId>
 	<version>2.0.3-SNAPSHOT</version>
 
 	<name>mddf-tools-test</name>
