--- a/mddf-lib/src/com/movielabs/mddf/resources/ISO3166-1.properties
+++ b/mddf-lib/src/com/movielabs/mddf/resources/ISO3166-1.properties
@@ -2,7 +2,7 @@
 ZZ=Global
 EU=EUROPEAN UNION
 AF=AFGHANISTAN
-AX=ÅLAND ISLANDS
+AX=Ã…LAND ISLANDS
 AL=ALBANIA
 DZ=ALGERIA
 AS=AMERICAN SAMOA
@@ -55,10 +55,10 @@ CG=CONGO
 CD=CONGO, DEM REP OF
 CK=COOK ISLANDS
 CR=COSTA RICA
-CI=CÔTE D'IVOIRE
+CI=CÃ”TE D'IVOIRE
 HR=CROATIA
 CU=CUBA
-CW=CURAÇAO
+CW=CURAÃ‡AO
 CY=CYPRUS
 CZ=CZECH REPUBLIC
 DK=DENMARK
@@ -181,11 +181,11 @@ PL=POLAND
 PT=PORTUGAL
 PR=PUERTO RICO
 QA=QATAR
-RE=RÉUNION
+RE=RÃ‰UNION
 RO=ROMANIA
 RU=RUSSIA
 RW=RWANDA
-BL=SAINT BARTHÉLEMY
+BL=SAINT BARTHÃ‰LEMY
 SH=SAINT HELENA, ASCENSION AND TRISTAN DA CUNHA
 KN=SAINT KITTS AND NEVIS
 LC=SAINT LUCIA
