--- a/mddf-tools/pom.xml
+++ b/mddf-tools/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.movielabs</groupId>
 	<artifactId>mddf-tools</artifactId>
-	<version>2.0.8-SNAPSHOT</version>
+	<version>2.0.8</version>
 
 	<name>mddf-tools</name>
 	<description>Desk-top MDDF services</description>
